增加Queue.size()测试。